# stringsifter

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile
stringsifter/: flarestrings.py  preprocess.py  rank_strings.py  version.py
stringsifter/lib/: constants.json  markov.pkl  stats.py  util.py
stringsifter/model/: featurizer.pkl  ranker.pkl
tests/: conftest.py  test_stringsifter.py
tests/fixtures/: strings_output1  strings_output2
