[tool.poetry]
name = 'stringsifter'
version = '3.20230711'
description = 'StringSifter is a machine learning tool that automatically ranks strings based on their relevance for malware analysis.'
authors = ['Mandiant Data Science Research', 'Mandiant Applied Research']
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mandiant/stringsifter"
packages = [
  {include = "stringsifter"}
]
include = [
  { path = "tests", format = "sdist" },
  { path = "misc/stringsifter-flat-dark.png", format = "sdist" }
]

[tool.poetry.dependencies]
python = '^3.9'
lightgbm = "~= 3.1"
scikit-learn = "~= 1.3.0"
joblib = "~= 1.3.1"
# Avoid "DeprecationWarning: np.find_common_type is deprecated"
# https://numpy.org/devdocs/release/1.25.0-notes.html
numpy = "== 1.24.4"
# Upstream fasttext does not work with newer pip versions
# https://github.com/facebookresearch/fastText/issues/512
#fasttext = {git = "https://github.com/cfculhane/fastText.git#main"}
fasttext-wheel = "~= 0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.scripts]
rank_strings = 'stringsifter.rank_strings:argmain'
flarestrings = 'stringsifter.flarestrings:main'
tests = 'pytest:main'
